data/forge_javadoc/1.7.10/processed/net_minecraft_client_gui_GuiEnchantment.md
# GuiEnchantment

**Inheritance:** java.lang.Object → net.minecraft.client.gui.Gui → net.minecraft.client.gui.GuiScreen → net.minecraft.client.gui.inventory.GuiContainer → net.minecraft.client.gui.GuiEnchantment

## Class signature

```java
public class GuiEnchantment extends GuiContainer
```

## Constructors

- `GuiEnchantment(InventoryPlayer p_i1090_1_, World p_i1090_2_, int p_i1090_3_, int p_i1090_4_, int p_i1090_5_, java.lang.String p_i1090_6_)`

## Methods

- `protected void drawGuiContainerBackgroundLayer(float p_146976_1_, int p_146976_2_, int p_146976_3_)`
- `protected void drawGuiContainerForegroundLayer(int p_146979_1_, int p_146979_2_)`
- `void func_147068_g()`
- `protected void mouseClicked(int p_73864_1_, int p_73864_2_, int p_73864_3_)`
- `void updateScreen()`

## Fields

- `float field_147069_w`
- `float field_147071_v`
- `int field_147073_u`
- `float field_147076_A`
- `float field_147080_z`
- `float field_147081_y`
- `float field_147082_x`